AC_INIT(gnome15-gnome-plugins, 0.0.5)
AC_CONFIG_SRCDIR([src/cal/cal.py])
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_LIBTOOL
AC_PROG_CC
     
dnl AX_PYTHON_DEVEL([2.6])

AM_PATH_PYTHON([2.6])

AX_PYTHON_MODULE(gnome15, [])
AS_IF([test "x${HAVE_PYMOD_GNOME15}" = "xno"],
     [AC_MSG_ERROR([Requires Gnome15])])
     
     
dnl Dependencies for plugins
 
AX_PYTHON_MODULE(vobject, [])
AS_IF([test "x${HAVE_PYMOD_VOBJECT}" = "xno"],
     [AC_MSG_ERROR([Requires Python vObject])])

AX_PYTHON_MODULE(evolution, [])
AS_IF([test "x${HAVE_PYMOD_EVOLUTION}" = "xno"],
     [AC_MSG_ERROR([Requires Evolution Bindings for Python])])
 
AX_PYTHON_MODULE(gnomekeyring, [])
AS_IF([test "x${HAVE_PYMOD_GNOMEKEYRING}" = "xno"],
     [AC_MSG_ERROR([Requires Gnome Keyring bindings for Python])])

AC_OUTPUT([
Makefile
src/Makefile
src/cal/Makefile
src/cal/default/Makefile
src/lcdbiff/Makefile
])
