AC_INIT(gnome15-iconpack, 0.0.5)
AC_CONFIG_SRCDIR([AwOken/status/16/logitech-g-keyboard-error-panel.png])
AM_INIT_AUTOMAKE([tar-ustar])

dnl AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_OUTPUT([
Makefile
AwOken/Makefile
AwOken/status/Makefile
AwOken/status/16/Makefile
AwOken/status/22/Makefile
AwOken/status/24/Makefile
AwOken/status/48/Makefile
AwOken/status/64/Makefile
AwOken/status/128/Makefile
AwOken/apps/Makefile
AwOken/apps/16/Makefile
AwOken/apps/22/Makefile
AwOken/apps/24/Makefile
AwOken/apps/48/Makefile
AwOken/apps/64/Makefile
AwOken/apps/128/Makefile
ubuntu-mono-dark/Makefile
ubuntu-mono-dark/status/Makefile
ubuntu-mono-dark/status/16/Makefile
ubuntu-mono-dark/status/22/Makefile
ubuntu-mono-dark/status/24/Makefile
ubuntu-mono-light/Makefile
ubuntu-mono-light/status/Makefile
ubuntu-mono-light/status/16/Makefile
ubuntu-mono-light/status/22/Makefile
ubuntu-mono-light/status/24/Makefile
])
