AC_INIT(gnome15-impulse15, 0.0.3)
AC_CONFIG_SRCDIR([impulse15/impulse15.py])
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_LIBTOOL
AC_PROG_CC
     
AC_CHECK_HEADER(fftw3.h,
    AC_CHECK_LIB([fftw3], fftw_execute,,
		AC_MSG_ERROR([*** Could not find libfftw3. ***])),
    	AC_MSG_ERROR([*** Header file fftw3.h. ***]))

AX_PYTHON_DEVEL([2.6])

AM_PATH_PYTHON([2.6])


AX_PYTHON_MODULE(gnome15, [])
AS_IF([test "x${HAVE_PYMOD_GNOME15}" = "xno"],
     [AC_MSG_ERROR([Requires Gnome15])])

AC_CHECK_LIB(pulse, pa_stream_new)
     
AC_OUTPUT([
Makefile
impulse15/Makefile
impulse15/default/Makefile
native/Makefile
])
