AC_INIT(gnome15-panel-applet, 0.0.3)
AC_CONFIG_SRCDIR([g15-applet])
AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_LIBTOOL
AC_PROG_CC
     
dnl AX_PYTHON_DEVEL([2.6])
AM_PATH_PYTHON([2.6])

AX_PYTHON_MODULE(gnome15, [])
AS_IF([test "x${HAVE_PYMOD_GNOME15}" = "xno"],
     [AC_MSG_ERROR([Requires Gnome15])])

AX_PYTHON_MODULE(gnomeapplet, [])
AS_IF([test "x${HAVE_PYMOD_GNOMEAPPLET}" = "xno"],
     [AC_MSG_ERROR([Requires GNOME Applet])])

AX_PYTHON_MODULE(dbus, [])
AS_IF([test "x${HAVE_PYMOD_DBUS}" = "xno"],
     [AC_MSG_ERROR([Requires DBUS bindings for Python])])
     
AX_PYTHON_MODULE(gobject, [])
AS_IF([test "x${HAVE_PYMOD_GOBJECT}" = "xno"],
     [AC_MSG_ERROR([Requires GObject for Python])])
     
PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

AC_OUTPUT([
Makefile
GNOME_G15Applet.server
])
